--- a/frontend/src/app/components/navbar/navbar.component.scss
+++ b/frontend/src/app/components/navbar/navbar.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables';
+
 // .navbar {
 //   -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
 //   -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
@@ -10,8 +12,12 @@
 // }
 
 .navbar-gradient {
-  background: linear-gradient(to bottom, #e04e1b 0%, #f37a4c 100%);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  background: linear-gradient(
+    to bottom,
+    var(--bs-primary) 0%,
+    lighten($primary, 10%) 100%
+  );
+  box-shadow: 0 2px 10px rgba($dark, 0.1);
   position: sticky;
   top: 0;
   z-index: 1030;
@@ -58,7 +64,11 @@
 
 // Make offcanvas header match the navbar
 .offcanvas-header-gradient {
-  background: linear-gradient(to bottom, #e04e1b 0%, #f37a4c 100%);
+  background: linear-gradient(
+    to bottom,
+    var(--bs-primary) 0%,
+    lighten($primary, 10%) 100%
+  );
   color: white;
   min-height: 70px; // Match navbar height
 }
